--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav>
       <ul class="navi">
         <li>
-          <a id="name">Timothy Dacalos</a>&nbsp<a
+          <a id="name">Timothy Dacalos</a>&nbsp&nbsp&nbsp<a
             >UI/UX Designer and Front-End Developer</a
           >
         </li>
